Many UI fixes
* Fixed: List column aggregations not updated when switched from cards to table layout.
* Fixed: Inline form not closed in list cards view.
* Fixed: List cards view overflowing over other form fields.
* Fixed: Drawing input, hard to use buttons on mobile view.

--- a/www/comps/input.css
+++ b/www/comps/input.css
@@ -460,11 +460,12 @@
 	background-color:var(--color-bg);
 	border-bottom:1px solid var(--color-border);
 	border-radius:5px 5px 0px 0px;
+	gap:12px;
 }
 .input-draw .canvasWrap{
-	/* required to apply real height to canvas child*/
-	flex:1 1 0;
+	flex:1 1 0px; /* required to apply real height to canvas child*/
 	overflow:hidden;
+	min-height:200px;
 }
 .input-draw canvas{
 	width:100%;
